<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nb_list"
        android:icon="@drawable/ic_list"
        android:title="List"/>
    <item
        android:id="@+id/nb_map"
        android:icon="@drawable/ic_map"
        android:title="Map"/>
    <item
        android:id="@+id/nb_profile"
        android:icon="@drawable/ic_profile"
        android:title="Profile"/>





</menu>