...
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.967" />


    <Button
        android:id="@+id/FavBtn"
        android:layout_width="wrap_content"
        android:layout_height="51dp"
        android:backgroundTint="@color/red"
        android:text="Add to fav"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.893"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/name"
...
