<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MapActivity">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="409dp"
        android:layout_height="93dp"
        android:id="@+id/bottomNavView_Bar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.998"
        app:menu="@menu/bottom_navigation_menu"
        />

    <org.osmdroid.views.MapView
        android:id="@+id/mapView"
        android:layout_width="413dp"
        android:layout_height="634dp"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavView_Bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>